--- a/WebUIBlazor/Pages/PromptAndNotificationsHandler.razor
+++ b/WebUIBlazor/Pages/PromptAndNotificationsHandler.razor
@@ -13,7 +13,7 @@
 </style>
 
 @code {
-    DialogOptions _dialogOptions = new DialogOptions() { DisableBackdropClick = true };
+    DialogOptions _dialogOptions = new DialogOptions() { DisableBackdropClick = true, CloseButton = true};
 
     protected override void OnInitialized()
     {
