--- a/WebUIBlazor/Shared/MainLayout.razor
+++ b/WebUIBlazor/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
         <MudSpacer />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/milemihailov/MachineControlHub" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" Href="https://www.linkedin.com/in/mile-mihailov-334a15222/" Target="_blank" />
-        <MudIconButton Icon="@Icons.Custom.Brands.Discord" Color="Color.Inherit" Href="" Target="_blank" />
+        <MudIconButton Icon="@Icons.Custom.Brands.Discord" Color="Color.Inherit" Href="https://discord.gg/FywjqDgw" Target="_blank" />
         <MudSwitch @bind-Value="@_isDarkMode" Color="Color.Primary" Class="ma-4" T="bool" ThumbIcon="@(_isDarkMode ? @Icons.Material.Filled.Bedtime : @Icons.Material.Filled.WbSunny)" />
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="2" Variant="@DrawerVariant.Temporary" >
