--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/controlpanel" Match="NavLinkMatch.Prefix">Control Panel</MudNavLink>
     <MudNavLink Href="/print" Match="NavLinkMatch.Prefix">Print Progress</MudNavLink>
+    <MudNavLink Href="/schedule" Match="NavLinkMatch.Prefix">Schedule Print</MudNavLink>
     <MudNavLink Href="/printhistory" Match="NavLinkMatch.Prefix">Print History</MudNavLink>
     <MudNavLink Href="/printersettings" Match="NavLinkMatch.Prefix">Printer Settings</MudNavLink>
 </MudNavMenu>
